# HyperLogLog_Cpp

./: .gitignore  CMakeLists.txt  README.md
backend_upload/: app.js  index.html  package-lock.json
frontend/: package-lock.json  package.json
frontend/src/app/: Content.css  layout.js  page.jsx  styles.css
frontend/src/app/information/: page.jsx  styles.css
frontend/src/app/playground/: functions.js  page.jsx  styles.css
frontend/src/components/: Circlegraph.css  Circlegraph.jsx  Footer.css  Footer.jsx  Navbar.css  Navbar.jsx  navbar.jsx
frontend/src/components/Navbar/: Navbar.jsx  styles.module.css
frontend/src/components/background/: background.jsx
include/: api.h  comparative.h  hyperloglog.h
lib/avl/: avl.h  node.h
lib/chainHash/: chainHash.h
mock/: MOCK_DATA.csv
src/: hyperloglog.h  main.cpp
